# K-VIN

./: CMakeLists.txt
doc/: cam_vs_imu_cs.drawio  control.drawio
src/odometry/: CMakeLists.txt  PoseEstimator.cpp  PoseEstimator.hpp  camL_to_camR_m.json  camR_to_IMU_m.json  cameraIntrinsics.json
src/sensors/: camR_to_IMU.json  camR_to_IMU_m.json
src/sensors/mpu6050/: CMakeLists.txt  MPU6050.cpp  MPU6050.hpp  MPU6050MSG.cxx  MPU6050MSG.h  MPU6050MSG.idl  MPU6050MSGPubSubTypes.cxx  MPU6050MSGPubSubTypes.h  MPU6050Publisher.cpp  calibration.json
src/sensors/oakdlite/: CMakeLists.txt  Frame.cxx  Frame.h  Frame.idl  FrameMSG.cxx  FrameMSG.h  FrameMSG.idl  FrameMSGPubSubTypes.cxx  FrameMSGPubSubTypes.h  FramePubSubTypes.cxx  FramePubSubTypes.h  StereoDepthFramePublisher.cpp  cameraIntrinsics.json  generateIntrinsicsJSON.py  testOakDLite.py
src/util/time_sync/: CMakeLists.txt  SensorDataSync.cxx  SensorDataSync.h  SensorDataSync.idl  SensorDataSyncPubSubTypes.cxx  SensorDataSyncPubSubTypes.h  SensorDataSyncPublisher.cpp  SensorDataSyncPublisher.hpp
